tests/ucc/type/bad/array-subscript-not-integer.c
int main(void)
{
    int *b;
    float a;
    int i;

    i = b[a];

    return 0;
}
